--- a/LoanConsumer-DanskeBank/pom.xml
+++ b/LoanConsumer-DanskeBank/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
