--- a/LoanProducer-Customer/pom.xml
+++ b/LoanProducer-Customer/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.12</version>
+        </dependency>
     </dependencies>
 
     <build>
