--- a/LoanProducer-Customer/pom.xml
+++ b/LoanProducer-Customer/pom.xml
@@ -29,7 +29,10 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -86,6 +89,7 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.12</version>
         </dependency>
+
     </dependencies>
 
     <build>
